name: ethereum-client-haskell
version: 0.0.4
cabal-version: >=1.10
build-type: Simple
author: Jamshid
license-file:  LICENSE
maintainer:    jamshidnh@gmail.com
synopsis: A Haskell version of an Ethereum client
extra-source-files:
               fastNonceFinder/bitfn.h
               fastNonceFinder/sha3.c
               fastNonceFinder/sha3.h
category:      Data Structures
license: BSD3
description:  
    The client described in the Ethereum Yellowpaper

source-repository this
  type:     git
  location: https://github.com/jamshidh/ethereum-client-haskell
  branch:   master
  tag:      v0.0.4

executable ethereumH
    default-language: Haskell98
    build-depends: 
                   base >= 4 && < 5
                 , base16-bytestring
                 , binary
                 , bytestring
                 , containers
                 , cryptohash
                 , data-default
                 , directory
                 , either
                 , entropy
                 , ethereum-data-leveldb
                 , ethereum-merkle-patricia-db
                 , ethereum-rlp
                 , filepath
                 , haskoin
                 , leveldb-haskell
                 , mtl
                 , network
                 , nibblestring
                 , resourcet
                 , SHA2
                 , time
                 , transformers
                 , vector
                 , ansi-wl-pprint
                 , ethereum-client-haskell
    main-is: Main.hs
    C-sources: fastNonceFinder/nonceFinder.c
    ghc-options: -Wall
    buildable: True
    hs-source-dirs: src

library
    default-language: Haskell98
    build-depends: 
                   base >= 4 && < 5
                 , base16-bytestring
                 , binary
                 , bytestring
                 , containers
                 , cryptohash
                 , data-default
                 , directory
                 , either
                 , entropy
                 , ethereum-data-leveldb
                 , ethereum-merkle-patricia-db
                 , ethereum-rlp
                 , filepath
                 , haskoin
                 , leveldb-haskell
                 , mtl
                 , network
                 , nibblestring
                 , resourcet
                 , SHA2
                 , time
                 , transformers
                 , vector
                 , ansi-wl-pprint
    exposed-modules: 
                   Blockchain.BlockChain
                   Blockchain.BlockSynchronizer
                   Blockchain.Communication
                   Blockchain.Constants
                   Blockchain.Context
                   Blockchain.Data.GenesisBlock
                   Blockchain.Data.Peer
                   Blockchain.Data.TransactionReceipt
                   Blockchain.Data.Wire
                   Blockchain.DB.ModifyStateDB
                   Blockchain.Display
                   Blockchain.ExtendedECDSA
                   Blockchain.ExtWord
                   Blockchain.JCommand
                   Blockchain.PeerUrls
                   Blockchain.SampleTransactions
                   Blockchain.SigningTools
                   Blockchain.VM.Code
                   Blockchain.VM.Environment
                   Blockchain.VM.Labels
                   Blockchain.VM.Memory
                   Blockchain.VM.Opcodes
                   Blockchain.VM.VMState
                   Blockchain.VM
    C-sources: fastNonceFinder/nonceFinder.c
    ghc-options: -Wall
    buildable: True
    hs-source-dirs: src

Test-Suite test-ethereumH
    default-language: Haskell98
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test, src
  build-depends:      base >= 4 && < 5
                    , test-framework
                    , test-framework-hunit
                    , HUnit
                    , containers