name: ethereum
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
description:  
extra-source-files: ""
 
executable ethereumH
    build-depends: base -any, cryptohash, binary, bytestring, time, 
                   network-simple, utf8-string, haskoin,
                   base16-bytestring, mtl, network
    main-is: Main.hs
    C-sources: fastNonceFinder/nonceFinder.c
    --ghc-options: -threaded
    buildable: True
    hs-source-dirs: src
    other-modules: RLP Wire
