name: ethereum
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
description:  
extra-source-files: ""
 
executable ethereumH
    build-depends: 
                   base -any
                 , cryptohash
                 , binary
                 , bytestring
                 , time
                 , network-simple
                 , haskoin
                 , base16-bytestring
                 , mtl
                 , network
                 , transformers
                 , resourcet
                 , data-default
                 , leveldb-haskell
                 , directory
    main-is: Main.hs
    C-sources: fastNonceFinder/nonceFinder.c
    --ghc-options: -threaded
    buildable: True
    hs-source-dirs: src
    other-modules: RLP Wire

Test-Suite test-ethereumH
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test, src
  build-depends:      base
                    , test-framework
                    , test-framework-hunit
                    , HUnit
                    , containers