name: ethereum
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
description:  
extra-source-files: ""
 
executable ethereumH
    build-depends: 
                   base -any
                 , base16-bytestring
                 , binary
                 , bytestring
                 , containers
                 , cryptohash
                 , data-default
                 , directory
                 , either
                 , entropy
                 , ethereum-merkle-patricia-db
                 , ethereum-rlp
                 , filepath
                 , haskoin
                 , leveldb-haskell
--                 , mtl
--                 , network
--                 , network-simple
                 , nibblestring
                 , resourcet
--                 , time
                 , transformers
                 , vector
                 , ansi-wl-pprint
    main-is: Main.hs
    C-sources: fastNonceFinder/nonceFinder.c
    ghc-options: -Wall
    buildable: True
    hs-source-dirs: src

executable queryEth
    build-depends: 
                   base -any
                 , cmdargs
                 , cryptohash
                 , binary
                 , bytestring
                 , time
                 , network-simple
                 , haskoin
                 , base16-bytestring
                 , mtl
                 , network
                 , transformers
                 , resourcet
                 , data-default
                 , leveldb-haskell
                 , array
                 , directory
    main-is: Main.hs
    C-sources: fastNonceFinder/nonceFinder.c
    buildable: True
    hs-source-dirs: queryEth_src, src

Test-Suite test-ethereumH
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test, src
  build-depends:      base
                    , test-framework
                    , test-framework-hunit
                    , HUnit
                    , containers